--- a/amino-powder-detail.html
+++ b/amino-powder-detail.html
@@ -80,9 +80,9 @@
             <div class="quantity-selector">
                 <div class="quantity-label">수량</div>
                 <div class="quantity-controls">
-                    <button onclick="updateQuantity(-1)">-</button>
+                    <button id="decrease-quantity">-</button>
                     <input type="text" value="1" id="quantity" readonly>
-                    <button onclick="updateQuantity(1)">+</button>
+                    <button id="increase-quantity">+</button>
                 </div>
             </div>
 
@@ -92,8 +92,8 @@
             </div>
 
             <div class="action-buttons">
-                <button class="add-to-cart-button" onclick="trackGA4Event('add_to_cart', {product_id: window.productDetail.id, product_name: window.productDetail.name, price: window.productDetail.price, quantity: parseInt(document.getElementById('quantity').value)})">장바구니 담기</button>
-                <button class="buy-now-button" onclick="trackGA4Event('buy_now', {product_id: window.productDetail.id, product_name: window.productDetail.name, price: window.productDetail.price, quantity: parseInt(document.getElementById('quantity').value)})">바로 구매하기</button>
+                <button class="add-to-cart-button" id="add-to-cart-button">장바구니 담기</button>
+                <button class="buy-now-button" id="buy-now-button">바로 구매하기</button>
             </div>
         </div>
     </main>
