--- a/ac-mask-detail.html
+++ b/ac-mask-detail.html
@@ -83,9 +83,9 @@
             <div class="quantity-selector">
                 <div class="quantity-label">수량</div>
                 <div class="quantity-controls">
-                    <button>-</button>
+                    <button class="quantity-decrease">-</button>
                     <input type="text" value="1" id="quantity" readonly>
-                    <button>+</button>
+                    <button class="quantity-increase">+</button>
                 </div>
             </div>
 
@@ -95,8 +95,8 @@
             </div>
 
             <div class="action-buttons">
-                <button class="add-to-cart-button">장바구니 담기</button>
-                <button class="buy-now-button">바로 구매하기</button>
+                <button class="add-to-cart-button" id="add-to-cart">장바구니 담기</button>
+                <button class="buy-now-button" id="buy-now">바로 구매하기</button>
             </div>
         </div>
     </main>
