--- a/ac-cream-detail.html
+++ b/ac-cream-detail.html
@@ -96,9 +96,9 @@
             <div class="quantity-selector">
                 <div class="quantity-label">수량</div>
                 <div class="quantity-controls">
-                    <button id="decrease-quantity">-</button>
+                    <button class="quantity-decrease">-</button>
                     <input type="text" value="1" id="quantity" readonly>
-                    <button id="increase-quantity">+</button>
+                    <button class="quantity-increase">+</button>
                 </div>
             </div>
 
