--- a/amino-powder-detail.html
+++ b/amino-powder-detail.html
@@ -80,9 +80,9 @@
             <div class="quantity-selector">
                 <div class="quantity-label">수량</div>
                 <div class="quantity-controls">
-                    <button id="decrease-quantity">-</button>
+                    <button class="quantity-decrease">-</button>
                     <input type="text" value="1" id="quantity" readonly>
-                    <button id="increase-quantity">+</button>
+                    <button class="quantity-increase">+</button>
                 </div>
             </div>
 
@@ -92,8 +92,8 @@
             </div>
 
             <div class="action-buttons">
-                <button class="add-to-cart-button" id="add-to-cart-button">장바구니 담기</button>
-                <button class="buy-now-button" id="buy-now-button">바로 구매하기</button>
+                <button class="add-to-cart-button" id="add-to-cart">장바구니 담기</button>
+                <button class="buy-now-button" id="buy-now">바로 구매하기</button>
             </div>
         </div>
     </main>
