--- a/ac-mask-detail.html
+++ b/ac-mask-detail.html
@@ -127,9 +127,10 @@
     <div id="cartPopup" class="popup" style="display: none;">
         <div class="popup-title">장바구니에 상품이 담겼습니다</div>
         <div class="popup-buttons">
-            <button class="popup-button continue-shopping" onclick="closePopup()">쇼핑 계속하기</button>
-            <button class="popup-button go-to-cart" onclick="goToCart()">장바구니로 이동</button>
+            <button class="popup-button continue-shopping">쇼핑 계속하기</button>
+            <button class="popup-button go-to-cart">장바구니로 이동</button>
         </div>
     </div>
+    <script src="/src/ac-detail-common.js"></script>
 </body>
-</html> 
+</html>
