--- a/cleansing-milk-detail.html
+++ b/cleansing-milk-detail.html
@@ -123,11 +123,11 @@
     <div class="popup" id="cartPopup">
         <div class="popup-title">상품이 장바구니에 담겼습니다.</div>
         <div class="popup-buttons">
-            <button class="popup-button continue-shopping" onclick="closePopup()">쇼핑 계속하기</button>
-            <button class="popup-button go-to-cart" onclick="goToCart()">장바구니 보기</button>
+            <button class="popup-button continue-shopping">쇼핑 계속하기</button>
+            <button class="popup-button go-to-cart">장바구니로 이동</button>
         </div>
     </div>
 
-    <script src="/src/amino-detail-common.js"></script>
+    <script src="/src/ac-detail-common.js"></script>
 </body>
-</html> 
+</html>
