--- a/cleansing-balm-detail.html
+++ b/cleansing-balm-detail.html
@@ -92,8 +92,8 @@
             </div>
 
             <div class="action-buttons">
-                <button class="add-to-cart-button" id="add-to-cart">장바구니 담기</button>
-                <button class="buy-now-button" id="buy-now">바로 구매하기</button>
+                <button class="add-to-cart-button">장바구니 담기</button>
+                <button class="buy-now-button">바로 구매하기</button>
             </div>
         </div>
     </main>
