--- a/ac-cream-detail.html
+++ b/ac-cream-detail.html
@@ -42,7 +42,7 @@
             image: '/images/ac-cream.jpg'
         };
     </script>
-    <script src="/src/ac-detail-common.js"></script>
+    <script src="../src/ac-detail-common.js"></script>
 </head>
 <body>
     <header class="header">
