--- a/ac-ampoule-detail.html
+++ b/ac-ampoule-detail.html
@@ -29,7 +29,7 @@
             image: '/images/ac-ampoule.jpg'
         };
     </script>
-    <script src="/src/ac-detail-common.js"></script>
+    <script src="../src/ac-detail-common.js"></script>
 </head>
 <body>
     <header class="header">
