--- a/amino-powder-detail.html
+++ b/amino-powder-detail.html
@@ -127,6 +127,6 @@
             <button class="popup-button go-to-cart">장바구니로 이동</button>
         </div>
     </div>
-    <script src="/src/ac-detail-common.js"></script>
+    <script src="../src/ac-detail-common.js"></script>
 </body>
 </html> 
