--- a/ac-cream-detail.html
+++ b/ac-cream-detail.html
@@ -144,5 +144,6 @@
             <button class="popup-button go-to-cart">장바구니로 이동</button>
         </div>
     </div>
+    <script type="module" src="/src/ac-detail-common.js"></script>
 </body>
 </html> 
