--- a/cleansing-milk-detail.html
+++ b/cleansing-milk-detail.html
@@ -128,6 +128,6 @@
         </div>
     </div>
 
-    <script src="/src/ac-detail-common.js"></script>
+    <script type="module" src="/src/ac-detail-common.js"></script>
 </body>
 </html>
