--- a/ac-product.html
+++ b/ac-product.html
@@ -150,6 +150,6 @@
         </div>
     </footer>
 
-    <script src="/src/product.js"></script>
+    <script type="module" src="/src/product.js"></script>
 </body>
 </html> 
