--- a/cart.html
+++ b/cart.html
@@ -66,6 +66,6 @@
         <p>&copy; 2024 DEWYTREE. All rights reserved.</p>
     </footer>
 
-    <script src="/src/cart.js"></script>
+    <script type="module" src="/src/cart.js"></script>
 </body>
 </html> 
