--- a/order.html
+++ b/order.html
@@ -123,6 +123,6 @@
         </div>
     </div>
 
-    <script src="/src/order.js"></script>
+    <script type="module" src="/src/order.js"></script>
 </body>
 </html> 
