--- a/cart2.html
+++ b/cart2.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="cart-buttons">
                     <button class="continue-shopping-btn" onclick="goToHome()">쇼핑 계속하기</button>
-                    <button class="checkout-btn" onclick="checkout(); trackGA4Event('begin_checkout', {currency: 'KRW', value: parseFloat(document.getElementById('total').innerText.replace('원', '').replace(',', ''))});">구매하기</button>
+                    <button class="checkout-btn">구매하기</button>
                 </div>
             </div>
         </div>
