--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo" style="cursor: pointer;" onclick="goToHome()">DEWYTREE</div>
+        <div class="logo" style="cursor: pointer;">DEWYTREE</div>
     </header>
 
     <main class="cart-container">
@@ -55,8 +55,8 @@
                     <span id="total">0원</span>
                 </div>
                 <div class="cart-buttons">
-                    <button class="continue-shopping-btn" onclick="goToHome()">쇼핑 계속하기</button>
-                    <button class="checkout-btn" onclick="checkout(); trackGA4Event('begin_checkout', {currency: 'KRW', value: parseFloat(document.getElementById('total').innerText.replace('원', '').replace(',', ''))});">구매하기</button>
+                    <button class="continue-shopping-btn">쇼핑 계속하기</button>
+                    <button class="checkout-btn">구매하기</button>
                 </div>
             </div>
         </div>
