--- a/ac-ampoule-detail.html
+++ b/ac-ampoule-detail.html
@@ -29,7 +29,6 @@
             image: '/images/ac-ampoule.jpg'
         };
     </script>
-    <script src="/src/ac-detail-common.js"></script>
 </head>
 <body>
     <header class="header">
@@ -139,6 +138,15 @@
             <button class="popup-button go-to-cart">장바구니로 이동</button>
         </div>
     </div>
-    <script type="module" src="/src/ac-detail-common.js"></script>
+    <script>
+        // 스크립트가 DOMContentLoaded 이벤트를 기다리고 있기 때문에,
+        // 페이지 로드 후에 스크립트를 동적으로 로드합니다
+        document.addEventListener('DOMContentLoaded', function() {
+            const script = document.createElement('script');
+            script.type = 'module';
+            script.src = '/src/ac-detail-common.js';
+            document.body.appendChild(script);
+        });
+    </script>
 </body>
 </html> 
