--- a/ac-cream-detail.html
+++ b/ac-cream-detail.html
@@ -145,5 +145,7 @@
         </div>
     </div>
     <script type="module" src="/src/ac-detail-common.js"></script>
+    <script type="module" src="/src/supabase-client.js"></script>
+    <script src="/src/ac-detail-common.js"></script>
 </body>
-</html> 
+</html>
