--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEWYTREE - Natural Glow</title>
-    <script type="module" src="./src/main.js"></script>
+    <link rel="stylesheet" href="/src/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 </head>
 <body>
-    <!-- 리다이렉션 전 빈 페이지 -->
+ 
+
+  
+    <script type="module" src="/src/main.js"></script>
+
 </body>
 </html>
