--- a/order.html
+++ b/order.html
@@ -123,6 +123,7 @@
         </div>
     </div>
 
-    <script type="module" src="/src/order.js"></script>
+    <script type="module" src="/src/supabase-client.js"></script>
+    <script src="/src/order.js"></script>
 </body>
-</html> 
+</html>
