--- a/ac-mask-detail.html
+++ b/ac-mask-detail.html
@@ -131,6 +131,7 @@
             <button class="popup-button go-to-cart">장바구니로 이동</button>
         </div>
     </div>
-    <script type="module" src="/src/ac-detail-common.js"></script>
+    <script type="module" src="/src/supabase-client.js"></script>
+    <script src="/src/ac-detail-common.js"></script>
 </body>
 </html>
