--- a/index2.html
+++ b/index2.html
@@ -20,10 +20,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="/src/index2.css">
-    <script src="/src/index2.js"></script>
+    <script type="module" src="/src/index2.js"></script>
     <script>
         // 페이지 로드 시 버전 설정
-        window.addEventListener('load', function() {
+        window.addEventListener('load', () => {
             sessionStorage.setItem('currentVersion', 'b');
         });
 
