--- a/best.html
+++ b/best.html
@@ -23,11 +23,11 @@
 <body>
     <header class="header">
         <div class="header-left">
-            <div class="logo" onclick="location.href='index1.html'" style="cursor: pointer;">DEWYTREE</div>
+            <div class="logo" onclick="location.href='index2.html'" style="cursor: pointer;">DEWYTREE</div>
             <nav class="nav-menu">
-                <a href="brand.html">BRAND</a>
+                <a href="brand2.html">BRAND</a>
                 <div class="dropdown">
-                    <a href="product.html">PRODUCT</a>
+                    <a href="product2.html">PRODUCT</a>
                     <div class="dropdown-content">
                         <div class="menu-column">
                             <div class="menu-title">BY LINE</div>
@@ -38,10 +38,10 @@
                         </div>
                     </div>
                 </div>
-                <a href="best.html">BEST</a>
+                <a href="best2.html">BEST</a>
             </nav>
         </div>
-        <div class="cart-icon" onclick="location.href='cart.html'">🛒</div>
+        <div class="cart-icon" onclick="location.href='cart2.html'">🛒</div>
     </header>
 
     <main class="main-content">
